tests/unit/evaluation/flatzinc/test_array_too_short-bad.err_exp
test_array_too_short-bad.fzn:6: error: array a has size 10, but was assigned 3.
