tests/unit/evaluation/flatzinc/test_array_too_short-bad.fzn
% RUNS ON flatzinc
% RUNS ON fzn_fd
% RUNS ON fzn_fdlp
% RUNS ON fzn_lazyfd
% RUNS ON fzn_lp
array [1..10] of int: a = [1, 2, 3];
solve satisfy;
